fix windows loading